force-app/main/default/objects/FEC_Bank_Name__c/FEC_Bank_Name__c.object-meta.xml
<CustomObject>
    <description>Danh sách tên Ngân hàng</description>
    <label>Bank Name</label>
    <nameField>
        <displayFormat>BN - {0}</displayFormat>
        <label>Bank Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>