force-app/main/default/objects/FEC_Bank_Name__c/fields/FEC_Bank_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Bank_Full_Name__c</fullName>
    <description>Tên ngân hàng đầy đủ</description>
    <label>Bank Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>