force-app/main/default/objects/FEC_Bank_Name__c/fields/FEC_Bank_Name_English__c.field-meta.xml
<CustomField>
    <fullName>FEC_Bank_Name_English__c</fullName>
    <description>Tên ngân hàng English</description>
    <label>Bank Name English</label>
    <length>255</length>
    <type>Text</type>
</CustomField>