force-app/main/default/objects/FEC_Bank_Name__c/fields/FEC_Bank_Name_Noaccent__c.field-meta.xml
<CustomField>
    <fullName>FEC_Bank_Name_Noaccent__c</fullName>
    <description>Tên ngân hàng Noaccent</description>
    <label>Bank Name Noaccent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>