force-app/main/default/objects/FEC_Bank_Name__c/fields/FEC_Bank_Name_Vietnamese__c.field-meta.xml
<CustomField>
    <fullName>FEC_Bank_Name_Vietnamese__c</fullName>
    <description>Tên ngân hàng Vietnamese</description>
    <label>Bank Name Vietnamese</label>
    <length>255</length>
    <type>Text</type>
</CustomField>