force-app/main/default/objects/FEC_Bank_Name__c/fields/FEC_Pzinskey__c.field-meta.xml
<CustomField>
    <fullName>FEC_Pzinskey__c</fullName>
    <description>PZinskey</description>
    <label>Pzinskey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>